photonstrust_rs/build_error.txt
    Checking photonstrust_rs v0.1.0 (C:\Users\aksin\Desktop\Qutip+qskit projects\photonstrust\photonstrust_rs)
warning: unused import: `rand::Rng`
 --> src\lib.rs:4:5
  |
4 | use rand::Rng;
  |     ^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0277]: can't compare `SimEvent` with `SimEvent`
  --> src\lib.rs:22:14
   |
22 | impl Ord for SimEvent {
   |              ^^^^^^^^ no implementation for `SimEvent == SimEvent`
   |
   = help: the trait `PartialEq` is not implemented for `SimEvent`
   = note: required for `SimEvent` to implement `PartialOrd`
note: required by a bound in `Ord`
  --> /rustc/ed61e7d7e242494fb7057f2657300d9e77bb4fcb\library\core\src\cmp.rs:971:1
help: consider annotating `SimEvent` with `#[derive(PartialEq)]`
   |
16 + #[derive(PartialEq)]
17 | struct SimEvent {
   |

error[E0277]: can't compare `SimEvent` with `SimEvent`
  --> src\lib.rs:29:21
   |
29 | impl PartialOrd for SimEvent {
   |                     ^^^^^^^^ no implementation for `SimEvent == SimEvent`
   |
   = help: the trait `PartialEq` is not implemented for `SimEvent`
note: required by a bound in `PartialOrd`
  --> /rustc/ed61e7d7e242494fb7057f2657300d9e77bb4fcb\library\core\src\cmp.rs:1357:1
help: consider annotating `SimEvent` with `#[derive(PartialEq)]`
   |
16 + #[derive(PartialEq)]
17 | struct SimEvent {
   |

error[E0277]: can't compare `SimEvent` with `SimEvent`
  --> src\lib.rs:35:13
   |
35 | impl Eq for SimEvent {}
   |             ^^^^^^^^ no implementation for `SimEvent == SimEvent`
   |
   = help: the trait `PartialEq` is not implemented for `SimEvent`
note: required by a bound in `std::cmp::Eq`
  --> /rustc/ed61e7d7e242494fb7057f2657300d9e77bb4fcb\library\core\src\cmp.rs:339:1
help: consider annotating `SimEvent` with `#[derive(PartialEq)]`
   |
16 + #[derive(PartialEq)]
17 | struct SimEvent {
   |

error[E0599]: no method named `random_range` found for struct `StdRng` in the current scope
   --> src\lib.rs:88:41
    |
 88 |         if afterpulse_prob > 0.0 && rng.random_range(0.0..1.0) <= afterpulse_prob {
    |                                         ^^^^^^^^^^^^
    |
   ::: C:\Users\aksin\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\rand-0.10.0\src\rng.rs:159:8
    |
159 |     fn random_range<T, R>(&mut self, range: R) -> T
    |        ------------ the method is available for `StdRng` here
    |
    = help: items from traits can only be used if the trait is in scope
help: there is a method `random` with a similar name, but with different arguments
   --> C:\Users\aksin\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\rand-0.10.0\src\rng.rs:93:5
    |
 93 | /     fn random<T>(&mut self) -> T
 94 | |     where
 95 | |         StandardUniform: Distribution<T>,
    | |_________________________________________^
help: trait `RngExt` which provides `random_range` is implemented but not in scope; perhaps you want to import it
    |
  1 + use rand::RngExt;
    |

Some errors have detailed explanations: E0277, E0599.
For more information about an error, try `rustc --explain E0277`.
warning: `photonstrust_rs` (lib) generated 1 warning
error: could not compile `photonstrust_rs` (lib) due to 4 previous errors; 1 warning emitted
